# Automate_Backup_File

./: .gitignore  README.md
AutomatedBackupFile/AutomatedBackupFile/: App.xaml.cs  AutomatedBackupFile.csproj
AutomatedBackupFile/AutomatedBackupFile/Properties/: AssemblyInfo.cs
QT/AutomatedBackupFile/: BACKUPFILEMONITOR_USAGE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  SCHEDULE_IMPLEMENTATION.md  backupdestination.cpp  backupdestination.h  backupfilemonitor.cpp  backupfilemonitor.h  backupschedule.cpp  backupschedule.h  backupsource.cpp  backupsource.h  cloudauthdialog.cpp  cloudauthdialog.h  cloudprovider.cpp  cloudprovider.h  destinationmanager.cpp  destinationmanager.h  destinationtab.cpp  destinationtab.h  destinationtab.ui  fileencryptor.cpp  fileencryptor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_old.ui  networkcredentialsdialog.cpp  networkcredentialsdialog.h  retentionpolicy.cpp  retentionpolicy.h  schedulemanager.cpp  schedulemanager.h  scheduletab.cpp  scheduletab.h  scheduletab.ui  settingstab.cpp  settingstab.h  settingstab.ui  (+9 more)
QT/AutomatedBackupFileTests/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  main_test.cpp  test_backupdestination.cpp  test_backupengine.cpp  test_backupschedule.cpp  test_backupsource.cpp  test_filedecryptor.cpp  test_fileencryptor.cpp  test_retentionpolicy.cpp
QT/CudaEngineForEncryption/test1/CudaTest1/: CudaTest1.sln
QT/CudaEngineForEncryption/test1/CudaTest1/CudaTest1/: CudaTest1.cpp  CudaTest1.cu  CudaTest1.vcxproj  CudaTest1.vcxproj.filters
QT/backup_engine/BackupEngine/: CMakeLists.txt  backupengine.cpp  backupengine.h  filedecryptor.cpp  filedecryptor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
WPF/AutomatedBackupFile/: App.xaml.cs  AutomatedBackupFile.sln  MainWindow.xaml  MainWindow.xaml.cs
WPF/AutomatedBackupFile/AutomatedBackupFile/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs
WPF/AutomatedBackupFile/AutomatedBackupFile/Properties/: Resources.Designer.cs  Settings.Designer.cs
WPF/AutomatedBackupFile/Views/: DestinationTab.xaml  DestinationTab.xaml.cs  ScheduleTab.xaml  ScheduleTab.xaml.cs  SettingsTab.xaml  SettingsTab.xaml.cs  SourcesTab.xaml  SourcesTab.xaml.cs  TasksTab.xaml  TasksTab.xaml.cs
